Fix horizontal scroll part 2

--- a/source/less/blocks/contact.less
+++ b/source/less/blocks/contact.less
@@ -58,7 +58,7 @@
 .contact__map-wrapper {
   height: 457px;
   width: 320px;
-  margin-bottom: 34px;
+  margin-bottom: 39px;
   background-image: url("../img/map-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-size: 322px 457px;
@@ -93,12 +93,12 @@
 
   .contact__title {
     .font-set(43px, 700, 50px);
-    margin-left: 46px;
+    margin-left: 38px;
     margin-bottom: 50px;
   }
 
   .contact__list {
-    margin-left: 50px;
+    margin-left: 40px;
     margin-bottom: 56px;
   }
 
@@ -130,7 +130,7 @@
   }
 
   .contact__map-wrapper {
-    margin-bottom: 49px;
+    margin-bottom: 55px;
     width: 751px;
     height: 457px;
 
